// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root   "
>
  <label
    className="inputWrap labelPositionAfter"
    htmlFor="test"
    id="test__label"
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      id="test"
      onChange={null}
      required={false}
      type="checkbox"
    />
    <span
      className="label"
    >
      <span
        className="labelInner "
        id="test__labelText"
      >
        label
      </span>
    </span>
  </label>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root isRootInFormLayout isRootLayoutHorizontal isRootStateWarning"
>
  <label
    className="inputWrap labelPositionAfter"
    htmlFor="test"
    id="test__label"
  >
    <input
      checked={true}
      className="input"
      disabled={true}
      id="test"
      onChange={null}
      required={true}
      type="checkbox"
      value="value"
    />
    <span
      className="label"
    >
      <span
        className="labelInner "
        id="test__labelText"
      >
        label
      </span>
    </span>
  </label>
  <div
    className="helpText"
    id="test__helpText"
  >
    some help
  </div>
  <div
    className="validationText"
    id="test__validationText"
  >
    some error
  </div>
</div>
`;
